--- a/app/src/main/res/layout/mahjong_human_player.xml
+++ b/app/src/main/res/layout/mahjong_human_player.xml
@@ -1516,11 +1516,11 @@
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile1"
             android:backgroundTint= "#48000088"
-            android:backgroundTintMode="src_atop"
+            android:backgroundTintMode="add"
             android:background="@drawable/mahjongtiledots1" />
 
         <ImageButton
